syntax = "proto3";

package rpc;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service TCAPFlow {
	rpc AddState (StateInfo) returns (google.protobuf.Empty) {}
}

message StateInfo {
	google.protobuf.Timestamp time		= 1;
	SCCPAddress calling			= 2;
	SCCPAddress called			= 3;
	TCAPInfo tcap				= 4;
	repeated ROSInfo ros			= 5;
}

message SCCPAddress {
	uint32 ssn				= 1;
	uint32 ton				= 2;
	uint32 npi				= 3;
	string number				= 4;
}

message TCAPInfo {
	bytes otid 				= 1;
	bytes dtid 				= 2;
	int32 tag				= 3;
}

message ROSInfo {
	int32 type				= 1;
	int32 invokeId				= 2;
	int32 opCode				= 3;
}
